--- a/q/275790.html
+++ b/q/275790.html
@@ -46,31 +46,29 @@
 °     3
 </code></pre>
 <p>Then builds the pile, translates to characters, and prints.</p>
-<p><em>outdated...</em></p>
-<pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡»/Ż€Ṗ€ḊƊƬḣ»/ị“_/° ”Y - Main Link: no arguments
-25                                         - set the left argument to 25
-  ð                                        - start a new dyadic chain - f(L=25, R=25)
-   Ṭ                                       - {L} untruth -&gt; [0,0,...,0,1] (24 zeros &amp; 1)
-    Ṗ                                      - pop -&gt; [0,0,...,0] (24 zeros)
-      “@ɦ(½¤‘                              - code-page indices -&gt; [64,160,40,10,3]
-     ;                                     - concatenate -&gt; [0,0,...,0,64,160,40,10,3]
-             b4                            - to base four -&gt; [[0],[0],...,[0],[1,0,0,0],[2,2,0,0],[2,2,0],[2,2],[3]]
-               U                           - reverse each -&gt; [[0],[0],...,[0],[0,0,0,1],[0,0,2,2],[0,2,2],[2,2],[3]]
-                                               (full-height canvas with the bottom-left cigarette)
-                  31Ð¡                     - collect, repeating this 31 times:
-                Ż€                         -   prefix each with a zero
-                                                 (a full-height canvas with the next leftmost cigarette of the bottom row)
-                      »/                   - reduce by maximum (merge these canvases)
-                              Ƭ            - collect while distinct applying:
-                             Ɗ             -   last three links as a monad - f(Canvas):
-                        Ż€                 -     prefix each with a zero (move it right)
-                          Ṗ€               -     pop each (remove a cigarette)
-                            Ḋ              -     dequeue (remove the top line)
-                               ḣ           - head to index {R} (first 25 of these canvases)
-                                »/         - reduce by maximum (merge these canvases)
-                                  ị“_/° ”  - index into &quot;_/° &quot; (1-based and modular)
-                                         Y - join with newline characters
-                                           - implicit print
+<pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡Ḋ€Ḋ$ƬḣẎ»/ị“_/° ”Y - Main Link: no arguments
+25                                      - set the left argument to 25
+  ð                                     - start a new dyadic chain - f(L=25, R=25)
+   Ṭ                                    - {L} untruth -&gt; [0,0,...,0,1] (24 zeros &amp; 1)
+    Ṗ                                   - pop -&gt; [0,0,...,0] (24 zeros)
+      “@ɦ(½¤‘                           - code-page indices -&gt; [64,160,40,10,3]
+     ;                                  - concatenate -&gt; [0,0,...,0,64,160,40,10,3]
+             b4                         - to base four -&gt; [[0],[0],...,[0],[1,0,0,0],[2,2,0,0],[2,2,0],[2,2],[3]]
+               U                        - reverse each -&gt; [[0],[0],...,[0],[0,0,0,1],[0,0,2,2],[0,2,2],[2,2],[3]]
+                                            (full-height canvas with the bottom-left cigarette)
+                  31Ð¡                  - collect, repeating this 31 times:
+                Ż€                      -   prefix each with a zero
+                                              (a full-height canvas with the next leftmost cigarette of the bottom row)
+                          Ƭ             - collect while distinct applying:
+                         $              -   last two links as a monad - f(Canvases):
+                      Ḋ€                -     dequeue each (remove the top line from each canvas)
+                        Ḋ               -     dequeue (discard Canvas of leftmost cigarette)
+                           ḣ            - head to index {R} (first 25 of these lists of canvases)
+                            Ẏ           - tighten (to a list of 500 canvases)
+                             »/         - reduce by maximum (merge the canvases)
+                               ị“_/° ”  - index into &quot;_/° &quot; (1-based and modular)
+                                      Y - join with newline characters
+                                        - implicit print
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
