--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240927T012833Z
+"   /golfscore                                      20240927T035655Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/149942.html">Googles doodle on kids coding: shortest program : 0149942</a>
 <a href="q/275790.html">Five Hundred Cigarettes                         : 0275790</a>
 <a href="q/275787.html">Waiting girls face                              : 0275787</a>
 <a href="q/275630.html">Enter a personal identification number          : 0275630</a>
