--- a/q/230438.html
+++ b/q/230438.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Uiua</td><td>240918T172420Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/275617#275617">noodle p</a></td></tr>
-<tr d-ix="1"><td>218</td><td>Brainfuck > out.ppm</td><td>240918T152115Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/275612#275612">jan</a></td></tr>
-<tr d-ix="2"><td>028</td><td>Vyxal sḢ</td><td>220317T085648Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/244252#244252">emanresu</a></td></tr>
+<tr d-ix="0"><td>028</td><td>Vyxal sḢ</td><td>220317T085648Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/244252#244252">emanresu</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Uiua</td><td>240918T172420Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/275617#275617">noodle p</a></td></tr>
+<tr d-ix="2"><td>218</td><td>Brainfuck > out.ppm</td><td>240918T152115Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/275612#275612">jan</a></td></tr>
 <tr d-ix="3"><td>138</td><td>Setanta</td><td>240719T194004Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274268#274268">bb94</a></td></tr>
 <tr d-ix="4"><td>089</td><td>Typst</td><td>240719T072035Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274259#274259">bb94</a></td></tr>
 <tr d-ix="5"><td>088</td><td>JavaScript Node.js</td><td>240718T234140Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274252#274252">Andrew B</a></td></tr>
@@ -75,13 +75,31 @@
 <tr d-ix="46"><td>245</td><td>HTML</td><td>210626T161502Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230557#230557">user</a></td></tr>
 <tr d-ix="47"><td>164</td><td>TikZ</td><td>210626T160602Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230556#230556">Wheat Wi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>sḢ</code>, <s>49</s> <s>36</s> <s>35</s> <s>31</s> 28 bytes</h1>
+<pre><code>»qǎ}»H⁽ǔİƛ`&lt;¦₴ «⟇=øḢ-÷¥:#Π&gt;.
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrtxx459wrtI4oG9x5TEsMabYDzCpuKCtCDCq+Kfhz3DuOG4oi3Dt8KlOiPOoD4uIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Stuff Vyxal isn't meant to do! This took far too long. The <code>Ḣ</code> flag renders stdout as HTML. See the <a href="https://codegolf.stackexchange.com/posts/244252/revisions">revision history</a> for a version with (slightly) less questionable colours.</p>
+<p>Also, <a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrviiKjiiKnEiz3El8K7SDPhuofiiJ7Gm2A8wqbigrQgwqvin4c9w7jhuKItw7fCpTojzqA+LiIsIiIsIiJd" rel="nofollow noreferrer">here</a>'s a bonus one.</p>
+<p><a href="https://i.sstatic.net/4hPb2UULm.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/4hPb2UULm.png" alt="enter image description here" /></a></p>
+<pre><code>         ƛ     # Over each element of...
+      ⁽ǔİ      # All rotations of
+»qǎ}»H         # &quot;700cff&quot;
+          `... # Compresssed string `&lt;div style=background-color:#Π&gt;.`
+               # The Π pops and inserts an item from the stack.
+               # (s flag) turn the result into something HTML understands
+               # (Ḣ flag) render the output as HTML
+</code></pre>
+<p>For compression purposes, the character codes are all six rotations of <code>#700cff</code>, which creates something fairly close to a rainbow.</p>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, 11 bytes</h1>
 <pre><code>▽34≡↯300Gay
 </code></pre>
 <p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__4pa9MzTiiaHihq8zMDBHYXkK" rel="nofollow noreferrer">Uiua pad</a></p>
-<p>Believe it or not, Uiua has a built-in for the colors of the pride flag!</p>
+<p>Believe it or not, Uiua has a built-in for the colors of the pride flag! It also has corresponding built-ins for the colors of the transgender, gender-fluid, and many other LGBTQ+ pride flags.</p>
+<p><a href="https://codegolf.stackexchange.com/a/272504/108687">Also see my solution which gets the colors with a more creative idea.</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Brainfuck <code>&gt; out.ppm</code>, 218 bytes</h1>
+<div id="pu2" class="pu"><h1>Brainfuck <code>&gt; out.ppm</code>, 218 bytes</h1>
 <pre><code>&gt;+++++[[-&lt;+&gt;&gt;++&lt;]&gt;]&lt;&lt;[-]&lt;[-]&lt;[-]&lt;.[-]&lt;[-&lt;+&gt;]&lt;------.&lt;.&gt;---.---.++++.&lt;.&gt;--.++++++..&lt;.&gt;------.&lt;.&gt;+++++++&gt;&gt;-&gt;++&gt;&gt;&gt;++&gt;+&gt;&gt;++&gt;++&gt;&gt;&gt;++&gt;&gt;&gt;&gt;++&gt;+&gt;&gt;++&gt;-&lt;+[-&lt;+]&gt;+[-&lt;&lt;&lt;[&gt;&gt;&gt;.&gt;.&gt;.&lt;&lt;&lt;-[&gt;.&gt;.&gt;.&lt;&lt;&lt;-]&lt;+&lt;-]&gt;&gt;&gt;&gt;&gt;[-]&lt;[-]&lt;[-]&lt;&lt;[&gt;&gt;+&lt;&lt;-]&gt;&gt;&gt;&gt;&gt;+]
 </code></pre>
 <p>This program outputs the contents for a ppm file that looks like this:</p>
@@ -136,23 +154,6 @@ remove the 128 64 and 160
     &gt;&gt;&gt; go to next red
 +]
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>sḢ</code>, <s>49</s> <s>36</s> <s>35</s> <s>31</s> 28 bytes</h1>
-<pre><code>»qǎ}»H⁽ǔİƛ`&lt;¦₴ «⟇=øḢ-÷¥:#Π&gt;.
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrtxx459wrtI4oG9x5TEsMabYDzCpuKCtCDCq+Kfhz3DuOG4oi3Dt8KlOiPOoD4uIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Stuff Vyxal isn't meant to do! This took far too long. The <code>Ḣ</code> flag renders stdout as HTML. See the <a href="https://codegolf.stackexchange.com/posts/244252/revisions">revision history</a> for a version with (slightly) less questionable colours.</p>
-<p>Also, <a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrviiKjiiKnEiz3El8K7SDPhuofiiJ7Gm2A8wqbigrQgwqvin4c9w7jhuKItw7fCpTojzqA+LiIsIiIsIiJd" rel="nofollow noreferrer">here</a>'s a bonus one.</p>
-<p><a href="https://i.sstatic.net/4hPb2UULm.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/4hPb2UULm.png" alt="enter image description here" /></a></p>
-<pre><code>         ƛ     # Over each element of...
-      ⁽ǔİ      # All rotations of
-»qǎ}»H         # &quot;700cff&quot;
-          `... # Compresssed string `&lt;div style=background-color:#Π&gt;.`
-               # The Π pops and inserts an item from the stack.
-               # (s flag) turn the result into something HTML understands
-               # (Ḣ flag) render the output as HTML
-</code></pre>
-<p>For compression purposes, all the character codes end in 7.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://try-setanta.ie/" rel="nofollow noreferrer">Setanta</a>, <s>139</s> 138 bytes</h1>
 <pre><code>S:=staitse le i idir(0,6){dath@S(['red','orange','bui','glas','gorm','corcra'][i])k:=i*50cruth_lan@S([[0,k],[450,k],[450,k+50],[0,k+50]])}
