--- a/q/90497.html
+++ b/q/90497.html
@@ -875,13 +875,13 @@ disp(
 @for /l %%i in (1,2,51)do @call set s=%%s%%ABCDEFGHIJKLMNOPQRSTUVWXYZ&amp;call echo %%s:~0,%%i%%&amp;call set s=%%s:~%%i%%
 </code></pre>
 </div>
-<div id="pu47" class="pu"><h1><a href="http://github.com/JCumin/Brachylog" rel="nofollow">Brachylog</a>, 37 bytes</h1>
+<div id="pu47" class="pu"><h1><a href="http://github.com/JCumin/Brachylog" rel="noreferrer">Brachylog</a>, 37 bytes</h1>
 
 <pre><code>26~l&lt;:1aLc~j[@A:I],L~@nw
 =:2%1,.#@l?,
 </code></pre>
 
-<p><a href="http://brachylog.tryitonline.net/#code=MjZ-bDw6MWFMY35qW0BBOkldLEx-QG53Cj06MiUxLC4jQGw_LA&amp;input=" rel="nofollow">Try it online!</a></p>
+<p><a href="http://brachylog.tryitonline.net/#code=MjZ-bDw6MWFMY35qW0BBOkldLEx-QG53Cj06MiUxLC4jQGw_LA&amp;input=" rel="noreferrer">Try it online!</a></p>
 
 <h3>Explanation</h3>
 
@@ -930,12 +930,12 @@ w            Write that string to STDOUT
            ^hN2 -   (N+1)**2
 </code></pre>
 </div>
-<div id="pu51" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow">Pyth</a>, 12 bytes</h1>
+<div id="pu51" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="noreferrer">Pyth</a>, 12 bytes</h1>
 
 <pre><code>jtc*G26*Rd26
 </code></pre>
 
-<p><a href="http://pyth.herokuapp.com/?code=jtc%2aG26%2aRd26&amp;debug=0" rel="nofollow">Try it online!</a></p>
+<p><a href="http://pyth.herokuapp.com/?code=jtc%2aG26%2aRd26&amp;debug=0" rel="noreferrer">Try it online!</a></p>
 </div>
 <div id="pu52" class="pu"><h1>C, 79 bytes</h1>
 
