--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240927T072959Z
+"   /golfscore                                      20240927T075357Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/242780.html">Real-world progress bar                         : 0242780</a>
 <a href="q/90497.html">Alphabet triangle strikes again                 : 0090497</a>
 <a href="q/275787.html">Waiting girls face                              : 0275787</a>
 <a href="q/148897.html">BigNum Bakeoff Reboot                           : 0148897</a>
