--- a/q/275790.html
+++ b/q/275790.html
@@ -26,16 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>133</td><td>Bash + brotli</td><td>240927T112026Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275814#275814">Kjetil S</a></td></tr>
-<tr d-ix="1"><td>043</td><td>05AB1E</td><td>240927T075515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275811#275811">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>100</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
+<tr d-ix="0"><td>089</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
+<tr d-ix="1"><td>133</td><td>Bash + brotli</td><td>240927T112026Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275814#275814">Kjetil S</a></td></tr>
+<tr d-ix="2"><td>043</td><td>05AB1E</td><td>240927T075515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275811#275811">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>039</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
 <tr d-ix="4"><td>086</td><td>JavaScript ES6</td><td>240926T204618Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275800#275800">Arnauld</a></td></tr>
 <tr d-ix="5"><td>030</td><td>Charcoal</td><td>240926T212522Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275802#275802">Neil</a></td></tr>
 <tr d-ix="6"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
 <tr d-ix="7"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Bash + brotli, 133 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>100</s>,<s>91</s>,89 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>g&lt;$&gt;[0..28]&lt;*&gt;[-27..8]
+g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='o'|0&lt;1='/'
+</code></pre>
+<p>-11 bytes thanks to xnor!</p>
+<p><a href="https://tio.run/##y0gszk7Nyflfraus4OPo5x7q6O6q4BwQoKCsW8uVbRvzP91GxS7aQE/PyCLWRssuWtfIXE/PIpYrXaFSoaKmws7cVj0mT72mQrvSztioBkTbGNiqK6jXVNoY2qrHQ2QMdCpsTHWAKmzV89VrDEAy@ur/cxMz82wLSkuCS4oUsv8DAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Bash + brotli, 133 bytes</h1>
 <p>Kind of cheating but here goes:</p>
 <pre><code>echo HwEGwByp4z4Rt81aWOEFZMDWyxf//HsD2thmeRh5zL/jyX1d4EQQh9t6rW3jgi936M+HpQGCAoMDhASFBYYGh0eAAgkaRKiQoUOG57ob8wY=|base64 -d|brotli -d
 </code></pre>
@@ -43,7 +51,7 @@
 <pre><code>echo Hw0E+I+UrMW5EuQFtmFfvhQiDA+onBpYGGBAMf+FwAyPxGuTleazVpsBWCwWi8VisVgsFovFYrFYLBaLRdJfzNvcAA==|base64 -d|brotli -d
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 43 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 43 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>'_8×'/9DÌŸ×'°8žwŸ×ε'/4×ìÀN21-F¤ð.;]`¨)˜.Bí»
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f9fPd7i8HR1fUuXwz1HdwBZhzZYHN1XDmKe26qub3J4@uE1hxv8jAx13Q4tObxBzzo24dAKzdNz9JwOrz20@/9/AA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -83,13 +91,6 @@
   '/«        '#  And also append a &quot;/&quot;
  }R           # After the map: Reverse the list back
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 100 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>unlines$(&lt;$&gt;[0..34]).g&lt;$&gt;[28,27..0]
-g y x|26&lt;x,27&lt;y='_'|y&lt;x-31||x&lt;y-1=' '|y&lt;=x,x&lt;32,y&lt;25='o'|0&lt;1='/'
-</code></pre>
-<p><a href="https://tio.run/##FclPC4IwGIDxu5/iBYUVuKVb/w7vAonwEiFEp5LwICbailTYaH32pcfn9zyKrinb1n2pD8fklF6S9AD7LAOf/rxG3tyg2lqVXTDDYHeNGBPLfM6qKfg25BvGotyrwIC2fI16FDSS3Ik1qKmIrdVoaCwJTCJ1qFHw0CBfSfIiNsJxLYh7FrWS76E/9x9o3B8" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 43 42 </s> 39 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡Ḋ€Ḋ$ƬḣẎ»/ị“_/° ”Y
