--- a/q/275790.html
+++ b/q/275790.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
+<tr d-ix="0"><td>090</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
 <tr d-ix="1"><td>133</td><td>Bash + brotli</td><td>240927T112026Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275814#275814">Kjetil S</a></td></tr>
 <tr d-ix="2"><td>043</td><td>05AB1E</td><td>240927T075515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275811#275811">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>039</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
@@ -35,13 +35,14 @@
 <tr d-ix="6"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
 <tr d-ix="7"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>100</s>,<s>91</s>,89 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>100</s>, <s>91</s>, <s>89</s>, 90 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>g&lt;$&gt;[0..28]&lt;*&gt;[-27..8]
-g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='o'|0&lt;1='/'
+g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'|0&lt;1='/'
 </code></pre>
 <p>-11 bytes thanks to xnor!</p>
-<p><a href="https://tio.run/##y0gszk7Nyflfraus4OPo5x7q6O6q4BwQoKCsW8uVbRvzP91GxS7aQE/PyCLWRssuWtfIXE/PIpYrXaFSoaKmws7cVj0mT72mQrvSztioBkTbGNiqK6jXVNoY2qrHQ2QMdCpsTHWAKmzV89VrDEAy@ur/cxMz82wLSkuCS4oUsv8DAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>+1 byte because I didn't notice non-ascii <code>°</code></p>
+<p><a href="https://tio.run/##y0gszk7Nyflfraus4OPo5x7q6O6q4BwQoKCsW8uVbRvzP91GxS7aQE/PyCLWRssuWtfIXE/PIpYrXaFSoaKmws7cVj0mT72mQrvSztioBkTbGNiqK6jXVNoY2qrHQ2QMdCpsTHWAKmzVD21QrzEASemr/89NzMyzLSgtCS4pUsj@DwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Bash + brotli, 133 bytes</h1>
 <p>Kind of cheating but here goes:</p>
