--- a/q/275821.html
+++ b/q/275821.html
@@ -26,18 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
+<tr d-ix="0"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
 <tr d-ix="1"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 64 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8 bytes</h1>
-<pre><code>70ƛd₍‹›&quot;Ṅ
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
+<pre><code>70ƛd₍‹:&quot;Ṅ
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC54oC6XCLhuYQiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC5Olwi4bmEIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Bitstring:</p>
-<pre><code>0100110111000100000110110100011100100110110001010001011101101010
+<pre><code>01001101110001000001101101000111001001101011111111101111110011100
 </code></pre>
 <p>This should be fine formatting wise. Outputs <code>roundNo ⟨ part1 | part2 ⟩</code>.</p>
 <p>Also, <s>BT6? More like BalaTro for 6 hours on mobile</s></p>
+<h2>Explained</h2>
+<pre><code>70ƛd₍‹:&quot;Ṅ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁢​‎‏​⁢⁠⁡‌­
+70ƛ        # ‎⁡Over the range [1, 70]
+   d       # ‎⁢  Double each number n
+    ₍‹:    # ‎⁣  And push [n - 1, n]. This is slightly shorter than :‹$&quot;
+       &quot;   # ‎⁤  Pair with n
+# ‎⁢⁢The j flag joins on newlines
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>for i in {1..70};{
