--- a/q/275815.html
+++ b/q/275815.html
@@ -26,10 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
-<tr d-ix="1"><td>044</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
+<tr d-ix="1"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 41 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Making Japt do things it shouldn't be able to do again!<br>The unnecessary requirement to be able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
+<pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £`¬l:#`+Aö3 ¬
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVclY9IiVTKyLIaWNpJcMkLC4uLiRVZlYgo2CsbI46I2ArQfYzIKw&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3Ii" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>x;f(int*s){for(x=srand(s);*s;x=0,s++)printf(&quot;%s\e[38;5;%dm%s&quot;,x?&quot;&quot;:s,x|isspace(*s)?rand()%255:-1,x?s:&quot;&quot;);}
 </code></pre>
@@ -38,12 +44,6 @@
 <p><code>ESC[38;5;{ID}m</code></p>
 <p>Where <code>ID</code> is the color index from 0 to 255 of the following color table:</p>
 <p><a href="https://i.sstatic.net/TeLm5FJj.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/TeLm5FJj.png" alt="enter image description here" /></a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 44 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<p>Making Japt do things it shouldn't be able to do again!<br>Being able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
-<pre><code>OlUr&quot;^|%s&quot;È+&quot;%c&quot;Ã$,...$Uf&quot;%S+&quot; £`¬l:#`+3çLö
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVciJefCVzIsgrIiVjIsMkLC4uLiRVZiIlUysiIKNgrGyOOiNgKzPnTPY&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3Ii" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
 </div>
 
 <table id="st">
