--- a/q/275815.html
+++ b/q/275815.html
@@ -26,14 +26,48 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
+<tr d-ix="0"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 <tr d-ix="1"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 41 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Making Japt do things it shouldn't be able to do again!<br>The unnecessary requirement to be able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
-<pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £`¬l:#`+Aö3 ¬
+<pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £Aö3 ¬i`¬l:#
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVclY9IiVTKyLIaWNpJcMkLC4uLiRVZlYgo2CsbI46I2ArQfYzIKw&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3Ii" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVclY9IiVTKyLIaWNpJcMkLC4uLiRVZlYgo0H2MyCsaWCsbI46Iw&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3Ii" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
+<h2>JavaScript &quot;Translation&quot;</h2>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="false" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
+
+U=&gt;console.log(U.replace(V=/\S+/g,X=&gt;`%c`+X),...U.match(V).map(_=&gt;"color:#"+[...Array(3)].map(_=&gt;Math.random()*10|0).join``))
+
+console.clear();
+f(`Write a  program or
+function that takes a string as input and prints or otherwise renders the text with each word in a random color`)</code></pre>
+</div>
+</div>
+</p>
+<h2>Explanation</h2>
+<pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £Aö3 ¬i`...     :Implicit input of string U
+Ol                                         :console.log
+  Ur                                       :  Replace in U
+    V=                                     :    Assign to variable V
+      &quot;%S+&quot;                                :    RegEx /\S+/g
+           È                               :    Pass each match through a function
+            ic                             :      Prepend &quot;c&quot;
+              i%                           :      Prepend &quot;%&quot;
+                Ã                          :  End Replace
+                 $                         :  Switch to JavaScript
+                  ,...                     :    To allow use of the spread operator
+                      $                    :  Switch to Japt
+                       UfV                 :  Match all occurrences of V in U
+                           £               :  Map
+                            A              :    10
+                             ö3            :    Generate 3 random integers in the range [0,A)
+                                ¬          :    Join
+                                 i         :    Prepend
+                                  `...     :      Compressed string &quot;color:#&quot;
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
 
