--- a/q/275815.html
+++ b/q/275815.html
@@ -26,14 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
-<tr d-ix="1"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
+<tr d-ix="0"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
+<tr d-ix="1"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
+<tr d-ix="2"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 73 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>$=&gt;[loop match&amp;{\S+|\s+}=&gt;[prints color to :color map 3=&gt;[255 1random]&amp;]]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?NNWhqt" rel="nofollow noreferrer">Try it!</a></p>
+<p>Works in the online playground and most terminals.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Making Japt do things it shouldn't be able to do again!<br>The unnecessary requirement to be able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
 <pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £Aö3 ¬i`¬l:#
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVclY9IiVTKyLIaWNpJcMkLC4uLiRVZlYgo0H2MyCsaWCsbI46Iw&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3Ii" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;header=Ck94YNYOb6QuY9IjKClg&amp;code=T2xVclY9IiVTKyLIaWNpJcMkLC4uLiRVZlYgo0H2MyCsaWCsbI46Iw&amp;input=IldyaXRlIGEJcHJvZ3JhbSBvcgpmdW5jdGlvbiB0aGF0IHRha2VzIGEgc3RyaW5nIGFzIGlucHV0IGFuZCBwcmludHMgb3Igb3RoZXJ3aXNlIHJlbmRlcnMgdGhlIHRleHQgd2l0aCBlYWNoIHdvcmQgaW4gYSByYW5kb20gY29sb3VyIg" rel="nofollow noreferrer">Try it</a> (open your browser's console)</p>
 <h2>JavaScript &quot;Translation&quot;</h2>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="false" data-babel="false">
 <div class="snippet-code">
@@ -43,7 +50,7 @@ U=&gt;console.log(U.replace(V=/\S+/g,X=&gt;`%c`+X),...U.match(V).map(_=&gt;"colo
 
 console.clear();
 f(`Write a  program or
-function that takes a string as input and prints or otherwise renders the text with each word in a random color`)</code></pre>
+function that takes a string as input and prints or otherwise renders the text with each word in a random colour`)</code></pre>
 </div>
 </div>
 </p>
@@ -69,7 +76,7 @@ Ol                                         :console.log
                                   `...     :      Compressed string &quot;color:#&quot;
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>x;f(int*s){for(x=srand(s);*s;x=0,s++)printf(&quot;%s\e[38;5;%dm%s&quot;,x?&quot;&quot;:s,x|isspace(*s)?rand()%255:-1,x?s:&quot;&quot;);}
 </code></pre>
