--- a/q/275815.html
+++ b/q/275815.html
@@ -26,17 +26,52 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
-<tr d-ix="1"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
-<tr d-ix="2"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
+<tr d-ix="0"><td>033</td><td>05AB1E</td><td>240927T151859Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275828#275828">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
+<tr d-ix="2"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
+<tr d-ix="3"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 73 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 33 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<p><a href="https://i.sstatic.net/65skVngB.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/65skVngB.png" alt="CMD screenshot" /></a></p>
+<pre><code>.γ9çð¶)ćå}ε7Ý30+D60+«Ω27ç&quot;ÿ[ÿmÿ&quot;?
+</code></pre>
+<p>Uses <a href="https://en.wikipedia.org/wiki/ANSI_escape_code#Colors" rel="nofollow noreferrer">the 16 Windows 10 console colors</a>.</p>
+<p>Screenshot (which took a while to make, since apparently there was a Windows-10 patch that disabled ANSI again, so I had to enable it (again) in my Registry..):</p>
+<p><a href="https://tio.run/##XVCxSgQxEO39inE7udvlUPCwsjjF0uIEC6tsdm4TTTJrkpM7wdqvsJRDbATRduFy9f7SmmyjCMMMLzN5782QY6XEvi@6z5OwCR/b74Pdc3h96r6m4eVoMjo7noy2793b4TRsstDehFaHNjvt@yzLrlFx0gieYEYVwsWlWgAzVULS1DATTCk0NTqYe8bv4HzFBYt4H66EdBCDgZMeYUEWLHKLzEsyTEFjqbZM60QTNRr0MnXcGAx5qNGg/Td1v0Q3jBR7f3T10nkQ7AGjL6DyFrmXEThOdqC2Ud3GX@PBt/TJk5C1UOvkh7TGCqu04ELayNRQSpZijc/8V0ca8AJhHllKWhXxOH2eG8oVe1z/AA" rel="nofollow noreferrer">Try it online (to see the actual ANSI-escaped output).</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>.γ              # Adjacent group-by on the (implicit) input-string:
+                #  (implicitly push the current character)
+  9çð¶)ćå       #  Check whether this character is a whitespace
+  9ç            #   Push a 9, and convert it to a character: &quot;\t&quot;
+    ð           #   Push a space &quot; &quot;
+     ¶          #   Push a newline &quot;\n&quot;
+      )         #   Wrap all four values into a list
+       ć        #   Extract head: [&quot;\t&quot;,&quot; &quot;,&quot;\n&quot;],char
+        å       #   Check if the character is in this triplet
+ }ε             # After the group-by: map over each substring:
+                #  (implicitly push the current substring)
+   7Ý           #  Push a list in the range [0,7]
+     30+        #  Add 30 to each to make the range [30,37]
+        D       #  Duplicate it
+         60+    #  Add 60 to each in the copy to make the range [90,97]
+            «   #  Merge the two lists together
+             Ω  #  Push a random integer from this list
+   27ç          #  Push 27, and convert it to an ASCII character: ␛
+      &quot;ÿ[ÿmÿ&quot;   #  Push this string, where:
+                #   - the first `ÿ` is replaced with the ␛;
+                #   - the second `ÿ` is replaced with the random integer
+                #   - the third `ÿ` is replaced with the current substring
+             ?  #  Pop and output it (without newline)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 73 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[loop match&amp;{\S+|\s+}=&gt;[prints color to :color map 3=&gt;[255 1random]&amp;]]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?NNWhqt" rel="nofollow noreferrer">Try it!</a></p>
 <p>Works in the online playground and most terminals.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Making Japt do things it shouldn't be able to do again!<br>The unnecessary requirement to be able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
 <pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £Aö3 ¬i`¬l:#
 </code></pre>
@@ -76,7 +111,7 @@ Ol                                         :console.log
                                   `...     :      Compressed string &quot;color:#&quot;
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>x;f(int*s){for(x=srand(s);*s;x=0,s++)printf(&quot;%s\e[38;5;%dm%s&quot;,x?&quot;&quot;:s,x|isspace(*s)?rand()%255:-1,x?s:&quot;&quot;);}
 </code></pre>
