--- a/q/275815.html
+++ b/q/275815.html
@@ -32,12 +32,12 @@
 <tr d-ix="3"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 33 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<p><a href="https://i.sstatic.net/65skVngB.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/65skVngB.png" alt="CMD screenshot" /></a></p>
 <pre><code>.γ9çð¶)ćå}ε7Ý30+D60+«Ω27ç&quot;ÿ[ÿmÿ&quot;?
 </code></pre>
 <p>Uses <a href="https://en.wikipedia.org/wiki/ANSI_escape_code#Colors" rel="nofollow noreferrer">the 16 Windows 10 console colors</a>.</p>
 <p>Screenshot (which took a while to make, since apparently there was a Windows-10 patch that disabled ANSI again, so I had to enable it (again) in my Registry..):</p>
-<p><a href="https://tio.run/##XVCxSgQxEO39inE7udvlUPCwsjjF0uIEC6tsdm4TTTJrkpM7wdqvsJRDbATRduFy9f7SmmyjCMMMLzN5782QY6XEvi@6z5OwCR/b74Pdc3h96r6m4eVoMjo7noy2793b4TRsstDehFaHNjvt@yzLrlFx0gieYEYVwsWlWgAzVULS1DATTCk0NTqYe8bv4HzFBYt4H66EdBCDgZMeYUEWLHKLzEsyTEFjqbZM60QTNRr0MnXcGAx5qNGg/Td1v0Q3jBR7f3T10nkQ7AGjL6DyFrmXEThOdqC2Ud3GX@PBt/TJk5C1UOvkh7TGCqu04ELayNRQSpZijc/8V0ca8AJhHllKWhXxOH2eG8oVe1z/AA" rel="nofollow noreferrer">Try it online (to see the actual ANSI-escaped output).</a></p>
+<p><a href="https://i.sstatic.net/zh7Lsu5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zh7Lsu5n.png" alt="enter image description here" /></a></p>
+<p><a href="https://tio.run/##XVCxSgQxEO39inE7udvlUPCwsjjFDzjBwiqbnd1Ek8ya5OROsPYrLOUQG0G0XbhY7y@tyTaKMMzwMpP33gw5VkochqL/OAnb8L77Ovh@Ci@P/ec8PB/NJmfHs8nurX89nIdtFrrr0OnQZafDkGXZFSpOGsETLKhCuCBVAzNVQtI0sBBMKTQNOlh6xm/hfM0Fi3gfLoV0EIOBkx6hJgsWuUXmJRmmoLXUWKZ1ookaLXqZOm4Khjw0aND@m7pboRtHir0/unrlPAh2j9EXUHmD3MsIHCc7UtuobuOv6ehb@uRJyEaoTfJDWmOFVVqwljYytZSSpVjjM//VkQa8QFhGlpLWRTzOkOeGcsUeNj8" rel="nofollow noreferrer">Try it online (to see the actual ANSI-escaped output).</a></p>
 <p><strong>Explanation:</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>.γ              # Adjacent group-by on the (implicit) input-string:
@@ -48,7 +48,7 @@
      ¶          #   Push a newline &quot;\n&quot;
       )         #   Wrap all four values into a list
        ć        #   Extract head: [&quot;\t&quot;,&quot; &quot;,&quot;\n&quot;],char
-        å       #   Check if the character is in this triplet
+        å       #   Check if the character is in this whitespaces-triplet
  }ε             # After the group-by: map over each substring:
                 #  (implicitly push the current substring)
    7Ý           #  Push a list in the range [0,7]
@@ -59,7 +59,7 @@
              Ω  #  Push a random integer from this list
    27ç          #  Push 27, and convert it to an ASCII character: ␛
       &quot;ÿ[ÿmÿ&quot;   #  Push this string, where:
-                #   - the first `ÿ` is replaced with the ␛;
+                #   - the first `ÿ` is replaced with the ␛
                 #   - the second `ÿ` is replaced with the random integer
                 #   - the third `ÿ` is replaced with the current substring
              ?  #  Pop and output it (without newline)
