--- a/q/275821.html
+++ b/q/275821.html
@@ -26,10 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
-<tr d-ix="1"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
+<tr d-ix="1"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
+<tr d-ix="2"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 33 bytes</h1>
+<pre><code>=sort(row(1:70)*{1,2,2}+{0,-1,0})
+</code></pre>
+<p><img src="https://i.sstatic.net/Da882ED4.png" alt="enter image description here" /></p>
+<p>The result is unformatted. To get a formatted result (<strong>59 bytes</strong>):</p>
+<pre><code>=sort(text(row(1:70)*{1,2,2}+{0,-1,0},{&quot;00&quot;,&quot;0&quot;&quot;,&quot;&quot;&quot;,&quot;0&quot;}))
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
 <pre><code>70ƛd₍‹:&quot;Ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC5Olwi4bmEIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -49,7 +58,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>for i in {1..70};{
 echo $i $[i*2-1],$[i*2]
 }
