--- a/q/275815.html
+++ b/q/275815.html
@@ -26,12 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>033</td><td>05AB1E</td><td>240927T151859Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275828#275828">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
-<tr d-ix="3"><td>107</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
+<tr d-ix="0"><td>094</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
+<tr d-ix="1"><td>033</td><td>05AB1E</td><td>240927T151859Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275828#275828">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
+<tr d-ix="3"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 33 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 94 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>x;f(int*s){srand(s);for(x=1;*s;x=0,s++)printf(&quot;\e[38;5;%dm%s&quot;,x|isspace(*s)?rand()%256:-1,s);}
+</code></pre>
+<p><a href="https://onlinegdb.com/sjIkmjEj6" rel="nofollow noreferrer">Demo</a></p>
+<p>Changes the foreground color with the following escape sequence:</p>
+<p><code>ESC[38;5;{ID}m</code></p>
+<p>Where <code>ID</code> is the color index from 0 to 255 of the following color table:</p>
+<p>[![enter image description here][1]][1]</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 33 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.γ9çð¶)ćå}ε7Ý30+D60+«Ω27ç&quot;ÿ[ÿmÿ&quot;?
 </code></pre>
 <p>Uses <a href="https://en.wikipedia.org/wiki/ANSI_escape_code#Colors" rel="nofollow noreferrer">the 16 Windows 10 console colors</a>.</p>
@@ -65,13 +75,13 @@
              ?  #  Pop and output it (without newline)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 73 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 73 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[loop match&amp;{\S+|\s+}=&gt;[prints color to :color map 3=&gt;[255 1random]&amp;]]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?NNWhqt" rel="nofollow noreferrer">Try it!</a></p>
 <p>Works in the online playground and most terminals.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>44</s> 40 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Making Japt do things it shouldn't be able to do again!<br>The unnecessary requirement to be able to handle <em>any</em> type of whitespace cost <em>far</em> too many bytes :(</p>
 <pre><code>OlUrV=&quot;%S+&quot;Èici%Ã$,...$UfV £Aö3 ¬i`¬l:#
 </code></pre>
@@ -110,16 +120,6 @@ Ol                                         :console.log
                                  i         :    Prepend
                                   `...     :      Compressed string &quot;color:#&quot;
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 107 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>x;f(int*s){for(x=srand(s);*s;x=0,s++)printf(&quot;%s\e[38;5;%dm%s&quot;,x?&quot;&quot;:s,x|isspace(*s)?rand()%255:-1,x?s:&quot;&quot;);}
-</code></pre>
-<p><a href="https://onlinegdb.com/RpYbIODDh" rel="nofollow noreferrer">Demo</a></p>
-<p>Changes the foreground color with the following escape sequence:</p>
-<p><code>ESC[38;5;{ID}m</code></p>
-<p>Where <code>ID</code> is the color index from 0 to 255 of the following color table:</p>
-<p><a href="https://i.sstatic.net/TeLm5FJj.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/TeLm5FJj.png" alt="enter image description here" /></a></p>
 </div>
 
 <table id="st">
