--- a/q/275821.html
+++ b/q/275821.html
@@ -26,25 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
-<tr d-ix="1"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
+<tr d-ix="0"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
+<tr d-ix="1"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
 <tr d-ix="2"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
 <tr d-ix="3"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 32 bytes</h1>
+<pre><code>=sort(row(1:70)*{1,2,2}-{0,1,0})
+</code></pre>
+<p><img src="https://i.sstatic.net/jtMbpfRF.png" alt="enter image description here" /></p>
+<p>The result is unformatted. To get a formatted result (<strong>58 bytes</strong>):</p>
+<pre><code>=sort(text(row(1:70)*{1,2,2}-{0,1,0},{&quot;00&quot;,&quot;0&quot;&quot;,&quot;&quot;&quot;,&quot;0&quot;}))
+</code></pre>
+<p><img src="https://i.sstatic.net/Da882ED4.png" alt="enter image description here" /></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
 <pre><code>1:::::&quot;G&quot;=?;n&quot; &quot;{a(?:{a(?oo2*:1-n&quot;,&quot;onao1+!
 </code></pre>
 <p>Might be able to be improved, but I couldn't find anything right now.</p>
 <p>Starts with the counter as 1 and loops until exiting on <code>71</code>. Adds a space if the counter is less than <code>10</code>, then makes two copies of the counter times two, then prints that minus one, a comma, the remaining copy, then a newline.</p>
 <p><a href="https://mousetail.github.io/Fish/#eyJ0ZXh0IjoiMTo6Ojo6XCJHXCI9PztuXCIgXCJ7YSg/OnthKD9vbzIqOjEtblwiLFwib25hbzErISIsImlucHV0IjoiIiwic3RhY2siOiIiLCJzdGFja19mb3JtYXQiOiJjaGFycyIsImlucHV0X2Zvcm1hdCI6ImNoYXJzIn0=" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu1" class="pu"><h1>Google Sheets, 32 bytes</h1>
-<pre><code>=sort(row(1:70)*{1,2,2}-{0,1,0})
-</code></pre>
-<p><img src="https://i.sstatic.net/Da882ED4.png" alt="enter image description here" /></p>
-<p>The result is unformatted. To get a formatted result (<strong>58 bytes</strong>):</p>
-<pre><code>=sort(text(row(1:70)*{1,2,2}-{0,1,0},{&quot;00&quot;,&quot;0&quot;&quot;,&quot;&quot;&quot;,&quot;0&quot;}))
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
 <pre><code>70ƛd₍‹:&quot;Ṅ
